[gd_scene load_steps=41 format=2]

[ext_resource path="res://Ryu/RyuSpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://WalkForward.gd" type="Script" id=3]
[ext_resource path="res://Idle.gd" type="Script" id=4]
[ext_resource path="res://WalkBackward.gd" type="Script" id=5]
[ext_resource path="res://NeutralJump.gd" type="Script" id=6]
[ext_resource path="res://5A.gd" type="Script" id=7]
[ext_resource path="res://BackJump.gd" type="Script" id=8]
[ext_resource path="res://B4.gd" type="Script" id=9]
[ext_resource path="res://States.gd" type="Script" id=10]
[ext_resource path="res://JA5.gd" type="Script" id=11]
[ext_resource path="res://BJA5.gd" type="Script" id=12]
[ext_resource path="res://FJA5.gd" type="Script" id=13]
[ext_resource path="res://ForwardJump.gd" type="Script" id=14]
[ext_resource path="res://B5.gd" type="Script" id=15]
[ext_resource path="res://kayoonwallpaper.png" type="Texture" id=16]
[ext_resource path="res://NJB4.gd" type="Script" id=17]
[ext_resource path="res://BJB4.gd" type="Script" id=18]
[ext_resource path="res://FJB4.gd" type="Script" id=19]

[sub_resource type="Animation" id=1]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 32, 31, 32, 12 ]
}

[sub_resource type="Animation" id=18]
resource_name = "B4"
length = 1.9
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.5, 1.6, 1.7, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59, 60, 57, 58, 59, 60, 61, 62, 63 ]
}

[sub_resource type="Animation" id=2]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47, 48, 45, 44 ]
}

[sub_resource type="Animation" id=3]
resource_name = "BJA5"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 37, 38, 39 ]
}

[sub_resource type="Animation" id=20]
resource_name = "BJB4"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 57, 58, 59, 60 ]
}

[sub_resource type="Animation" id=4]
length = 2.1
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 0.7, 0.8, 0.9, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 27, 26, 25, 24, 28, 20 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 33 ]
}

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 11, 12 ]
}

[sub_resource type="Animation" id=8]
resource_name = "FJA5"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 37, 38, 39 ]
}

[sub_resource type="Animation" id=21]
resource_name = "FJB4"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 57, 58, 59, 60 ]
}

[sub_resource type="Animation" id=9]
length = 2.1
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 0.7, 0.8, 1, 1.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27, 28, 20 ]
}

[sub_resource type="Animation" id=10]
length = 1.20591
loop = true
step = 0.100492
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.301477, 0.602954, 0.904432 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=11]
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 37, 38, 39 ]
}

[sub_resource type="Animation" id=19]
resource_name = "NJB4"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 57, 58, 59, 60 ]
}

[sub_resource type="Animation" id=12]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.9, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 16, 15, 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=13]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 35 ]
}

[sub_resource type="Animation" id=14]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 8, 7, 6 ]
}

[sub_resource type="Animation" id=15]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RyuSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9 ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 22.0575, 38.0835 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 243.698, 10 )

[node name="Game" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 2.83167, -78.7495 )
scale = Vector2( 0.396916, 0.294737 )
texture = ExtResource( 16 )

[node name="Player" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="States" type="Node" parent="Player"]
script = ExtResource( 10 )
gravity = 5

[node name="Idle" type="Node" parent="Player/States"]
script = ExtResource( 4 )

[node name="A5" type="Node" parent="Player/States/Idle"]
script = ExtResource( 7 )

[node name="B4" type="Node" parent="Player/States/Idle"]
script = ExtResource( 9 )

[node name="B5" type="Node" parent="Player/States/Idle"]
script = ExtResource( 15 )

[node name="WalkForward" type="Node" parent="Player/States"]
script = ExtResource( 3 )

[node name="WalkBackward" type="Node" parent="Player/States"]
script = ExtResource( 5 )

[node name="NeutralJump" type="Node" parent="Player/States"]
script = ExtResource( 6 )

[node name="NJA5" type="Node" parent="Player/States/NeutralJump"]
script = ExtResource( 11 )

[node name="NJB4" type="Node" parent="Player/States/NeutralJump"]
script = ExtResource( 17 )

[node name="BackJump" type="Node" parent="Player/States"]
script = ExtResource( 8 )

[node name="BJA5" type="Node" parent="Player/States/BackJump"]
script = ExtResource( 12 )

[node name="BJB4" type="Node" parent="Player/States/BackJump"]
script = ExtResource( 18 )

[node name="ForwardJump" type="Node" parent="Player/States"]
script = ExtResource( 14 )

[node name="FJA5" type="Node" parent="Player/States/ForwardJump"]
script = ExtResource( 13 )

[node name="FJB4" type="Node" parent="Player/States/ForwardJump"]
script = ExtResource( 19 )

[node name="RyuAnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/A5 = SubResource( 1 )
anims/B4 = SubResource( 18 )
anims/B5 = SubResource( 2 )
anims/BJA5 = SubResource( 3 )
anims/BJB4 = SubResource( 20 )
anims/BackJump = SubResource( 4 )
anims/Crouch = SubResource( 5 )
anims/CrouchBlocking = SubResource( 6 )
anims/Crouching = SubResource( 7 )
anims/FJA5 = SubResource( 8 )
anims/FJB4 = SubResource( 21 )
anims/ForwardJump = SubResource( 9 )
anims/Idle = SubResource( 10 )
anims/NJA5 = SubResource( 11 )
anims/NJB4 = SubResource( 19 )
anims/NeutralJump = SubResource( 12 )
anims/StandBlocking = SubResource( 13 )
anims/WalkBackward = SubResource( 14 )
anims/WalkForward = SubResource( 15 )

[node name="RyuSprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )
offset = Vector2( 26, 0 )
vframes = 6
hframes = 11
frame = 57

[node name="RyuCollisionBox" type="CollisionShape2D" parent="Player"]
position = Vector2( 1.93247, 5.50008 )
shape = SubResource( 16 )

[node name="Projectiles" type="Node" parent="Player"]

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 0, 60 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 17 )

[node name="Sprite" type="Sprite" parent="Floor"]
position = Vector2( 0.553875, 0.794592 )
scale = Vector2( 7.62089, 0.29645 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -75.7264 )
current = true
zoom = Vector2( 0.5, 0.5 )
[connection signal="animation_finished" from="Player/RyuAnimationPlayer" to="Player" method="_on_AnimationPlayer_animation_finished"]
